--- a/src/main/resources/static/View/wdgl/Questions_Detail.html
+++ b/src/main/resources/static/View/wdgl/Questions_Detail.html
@@ -44,37 +44,37 @@
 			</tr>
 			<tr>
 				<td class="editTitle" style="width:125px;"><label data-locale="QUESTION_DATE"/></td>
-				<td class="searchParamesTdControl">
+				<td class="editControl">
 					<input type="text" name="question_date" id="question_date" class="easyui-datebox" style="width: 13%" />
 				</td>
 			</tr>
 			<tr>
 				<td class="editTitle" style="width:125px;"><label data-locale="CONTACT_NAME"/></td>
-				<td class="searchParamesTdControl">
+				<td class="editControl">
 					<input type="text" name="contact_name" id="contact_name" class="easyui-textbox" style="width: 25%;"/>
 				</td>
 			</tr>
 			<tr>
 				<td class="editTitle" style="width:125px;"><label data-locale="HUAWEI_NO"/></td>
-				<td class="searchParamesTdControl">
+				<td class="editControl">
 					<input type="text" name="huawei_no" id="huawei_no" class="easyui-textbox" style="width: 25%;"/>
 				</td>
 			</tr>
 			<tr>
 				<td class="editTitle" style="width:125px;"><label data-locale="CONTACT_INFO"/></td>
-				<td class="searchParamesTdControl">
+				<td class="editControl">
 					<input type="text" name="contact_info" id="contact_info" class="easyui-textbox" style="width: 25%;"/>
 				</td>
 			</tr>
 			<tr>
 				<td class="editTitle" style="width:125px;"><label data-locale="ACCOUNT_MANAGER"/></td>
-				<td class="searchParamesTdControl">
+				<td class="editControl">
 					<input type="text" name="account_manager" id="account_manager" class="easyui-textbox" style="width: 25%;"/>
 				</td>
 			</tr>
 			<tr>
 				<td class="editTitle" style="width:125px;"><label data-locale="HANDLER"/></td>
-				<td class="searchParamesTdControl">
+				<td class="editControl">
 					<input type="text" name="handler" id="handler" class="easyui-textbox" style="width: 25%;"/>
 				</td>
 			</tr>
@@ -120,7 +120,7 @@
 			</tr>
 			<tr>
 				<td class="editTitle" style="width:125px;"><label data-locale="WORK_ORDER_NO"/></td>
-				<td class="searchParamesTdControl">
+				<td class="editControl">
 					<input type="text" name="work_order_no" id="work_order_no" class="easyui-textbox" style="width: 25%;"/>
 				</td>
 			</tr>
