--- a/src/main/resources/static/View/cpgl/OpenRecord_List.html
+++ b/src/main/resources/static/View/cpgl/OpenRecord_List.html
@@ -9,7 +9,7 @@
     <link type="text/css" rel="stylesheet" href="../../Resource/js/easyUI/themes/icon.css" />
     <link type="text/css" rel="stylesheet" href="../../Resource/js/jqueryUI/theme/ui.jqgrid.css" />
     <link type="text/css" rel="stylesheet" href="../../Resource/js/moment/css/daterangepicker.css" />
-    <title>J进货管理</title>
+    <title>拆件管理</title>
 </head>
 <body>
 <div id="toolbar" class="easyui-panel" style="padding:4px;border-width:0;border-bottom-width:1px;">
@@ -23,7 +23,7 @@
             </td>
             <td width="20px;"></td>
             <td class="searchParamesTdTitle">
-                进货时间:
+                拆件时间:
             </td>
             <td class="searchParamesTdControl">
                 <input type="text" name="begin_date" id="begin_date" class="easyui-datebox" editable="false" style="width: 90px" />
@@ -102,17 +102,18 @@
     // 获取查询URL
     var getSearchGridUrl = function() {
         var customSearchFilters = encodeURI(getSearchFilters());
-        return '../../cpgl/PurchaseManagerController/getListForGrid?' + Math.random() + '&customSearchFilters=' + customSearchFilters;
+        return '../../cpgl/openRecordController/getListForGrid?' + Math.random() + '&customSearchFilters=' + customSearchFilters;
     };
 
     // 获取查询条件
     var getSearchFilters = function() {
         var parmsArray = [
             [
-                { name: 'docking_man', value: $('#common_sheet_title').textbox('getValue'), op: 'cn' }
+                { name: 'sheet_no', value: $('#common_sheet_title').textbox('getValue'), op: 'cn' },
+                { name: 'goods_name', value: $('#common_sheet_title').textbox('getValue'), op: 'cn' }
             ],
-            { name: '_d_receive_date', value: $('#begin_date').textbox('getValue'), op: 'ge' },
-            { name: '_d_receive_date', value: $('#end_date').textbox('getValue'), op: 'le' }
+            { name: '_d_open_date', value: $('#begin_date').textbox('getValue'), op: 'ge' },
+            { name: '_d_open_date', value: $('#end_date').textbox('getValue'), op: 'le' }
         ];
         return formatSearchParames(parmsArray);
     };
@@ -124,40 +125,58 @@
             datatype: 'json',
             width: 'none',
             colNames: [
+                //基本信息
                 $.i18n.prop('ID'),
                 $.i18n.prop('SHEET_NO'),
-                $.i18n.prop('RECEIVE_DATE'),
-                $.i18n.prop('BOX_NUM'),
-                $.i18n.prop('BOX_PRICE'),
-                $.i18n.prop('BOX_TOTAL_PRICE'),
-                $.i18n.prop('FREIGHT'),
-                $.i18n.prop('TOTAL_FREIGHT'),
-                $.i18n.prop('DOCKING_MAN'),
+                $.i18n.prop('OPEN_DATE'),
+                $.i18n.prop('GOODS_TYPE'),
+                $.i18n.prop('GOODS_NAME'),
+                $.i18n.prop('BOX_SIZE'),
+                $.i18n.prop('BOX_VALUE'),
+                $.i18n.prop('KUAIDI_COMPANY'),
+                $.i18n.prop('DAMAGE'),
+                //卖出信息
+                $.i18n.prop('SELL_MODE'),
+                $.i18n.prop('SOLD'),
+                $.i18n.prop('SELL_NO'),
+                $.i18n.prop('SELL_DATE'),
+                $.i18n.prop('SOLD_DATE'),
+                $.i18n.prop('OUT_TIME'),
+                $.i18n.prop('GOODS_COST'),
+                $.i18n.prop('SELL_PRICE'),
+                $.i18n.prop('GOODS_PROFIT'),
+                $.i18n.prop('FREE_SHIPPING'),
+                $.i18n.prop('EXPRESS_FEE'),
                 $.i18n.prop('REMARK')
             ],
             colModel: [
                 { name: 'id', index: 'id', align: 'center', sorttype: 'int', sortable: false, key: true, width: 40, hidden: true, search: false },
                 { name: 'sheet_no', index: 'sheet_no', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
-                { name: 'receive_date', index: '_d_receive_date', align: 'center', width: 120, search: true, type: 'string',
+                { name: 'open_date', index: '_d_open_date', align: 'center', width: 120, search: true, type: 'string',
                     searchoptions: { sopt: ['ge'], dataEvents: [ { type: 'click', data: {}, fn: function() { WdatePicker(); } } ] } },
-                { name: 'box_num', index: 'box_num', align: 'right', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
-                { name: 'box_price', index: 'box_price', align: 'right', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] }
+                { name: 'goods_type', index: 'goods_type', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'goods_name', index: 'goods_name', align: 'center', width: 180, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'box_size', index: 'box_size', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'box_value', index: 'box_value', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'kuaidi_company', index: 'kuaidi_company', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'damage', index: 'damage', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'sell_mode', index: 'sell_mode', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'sold', index: 'sold', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'sell_no', index: 'sell_no', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'sell_date', index: 'sell_date', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'sold_date', index: 'sold_date', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'out_time', index: 'out_time', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'goods_cost', index: 'goods_cost', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'sell_price', index: 'sell_price', align: 'right', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] }
                     ,formatter: function (value, grid, rows) {
-                        return keepTwoPointData(rows.box_total_price);
+                        return keepTwoPointData(rows.sell_price);
                     }},
-                { name: 'box_total_price', index: 'box_total_price', align: 'right', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] }
+                { name: 'goods_profit', index: 'goods_profit', align: 'right', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] }
                     ,formatter: function (value, grid, rows) {
-                        return keepTwoPointData(rows.box_total_price);
+                        return keepTwoPointData(rows.goods_profit);
                     }},
-                { name: 'freight', index: 'freight', align: 'right', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] }
-                    ,formatter: function (value, grid, rows) {
-                        return keepTwoPointData(rows.freight);
-                    }},
-                { name: 'total_freight', index: 'total_freight', align: 'right', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] }
-                    ,formatter: function (value, grid, rows) {
-                        return keepTwoPointData(rows.total_freight);
-                    }},
-                { name: 'docking_man', index: 'docking_man', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'free_shipping', index: 'free_shipping', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
+                { name: 'express_fee', index: 'express_fee', align: 'center', width: 100, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } },
                 { name: 'remark', index: 'remark', align: 'center', width: 350, type: 'string', search: true, searchoptions: { sopt: ['cn', 'eq', 'ne'] } }
 
 
@@ -238,12 +257,12 @@
     //jqGrid加载
     function afterRedRow() {
         var ids = $("#gridTable").jqGrid("getDataIDs");
-/*        for (var i = 0; i < ids.length; i++) {
+        for (var i = 0; i < ids.length; i++) {
             var rowData = $("#gridTable").getRowData(ids[i]);
-            if (rowData.state == '已使用') {
+            if (rowData.state == '已售') {
                 $('#gridTable #' + ids[i]).find("td").css('color', "#8b2f2c");
             }
-        }*/
+        }
     }
     // 双击数据触发的事件
     var showChildModule = function(rowid) {
@@ -299,7 +318,7 @@
 
     //批量使用
     function commonFunction() {
-        var url = "../../cpgl/PurchaseManagerController/delete?t="+Math.random();
+        var url = "../../cpgl/openRecordController/delete?t="+Math.random();
         var selectRowItems = $("#gridTable").jqGrid("getGridParam", "selarrrow");
         if (selectRowItems.length==0) {
             errorNotification({
